Solved some encapsulation questions

--- a/DayWiseMaterial/Assignments/20th_Oct_OOPs_Assignment2.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Oct_OOPs_Assignment2.ipynb
@@ -2555,14 +2555,81 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Ans:\n",
+    "\n",
+    "Getter and setter methods are a part of encapsulation in object-oriented programming. They provide controlled access to the attributes of a class, allowing you to retrieve and modify their values. This helps maintain data integrity and enables you to add additional logic or validation when getting or setting attributes.\n",
+    "\n",
+    "**Getter Methods** (also known as Accessor Methods):\n",
+    "\n",
+    "* Getter methods are used to retrieve the values of private attributes.\n",
+    "* They provide controlled read-only access to attribute values.\n",
+    "* They can include additional logic or validation before returning the value.\n",
+    "\n",
+    "**Setter Methods** (also known as Mutator Methods):\n",
+    "\n",
+    "* Setter methods are used to modify the values of private attributes.\n",
+    "* They provide controlled write-only access to attribute values.\n",
+    "* They can include validation or additional logic to ensure that the new value is acceptable.\n",
+    "\n",
+    "Example code:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "20\n",
+      "28\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Rectangle:\n",
+    "    def __init__(self, width, height):\n",
+    "        # Private attributes\n",
+    "        self.__width = width  \n",
+    "        self.__height = height\n",
+    "\n",
+    "    # Getter methods\n",
+    "    def get_width(self):\n",
+    "        return self.__width\n",
+    "\n",
+    "    def get_height(self):\n",
+    "        return self.__height\n",
+    "\n",
+    "    # Setter methods\n",
+    "    def set_width(self, width):\n",
+    "        if width > 0:\n",
+    "            self.__width = width\n",
+    "\n",
+    "    def set_height(self, height):\n",
+    "        if height > 0:\n",
+    "            self.__height = height\n",
+    "\n",
+    "    def area(self):\n",
+    "        return self.__width * self.__height\n",
+    "\n",
+    "# Creating instance:\n",
+    "rectangle = Rectangle(15, 20)\n",
+    "\n",
+    "# Using getter methods to access attributes\n",
+    "print(rectangle.get_width())\n",
+    "print(rectangle.get_height())\n",
+    "\n",
+    "# Using setter methods to modify attributes\n",
+    "rectangle.set_width(7)\n",
+    "rectangle.set_height(4)\n",
+    "\n",
+    "# Calculating the area using the area method\n",
+    "print(rectangle.area())\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2575,7 +2642,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Ans:\n",
+    "\n",
+    "Name mangling is a technique used in Python to make attributes in a class more difficult to access from outside the class. It involves adding a prefix or suffix to an attribute name to make it harder to accidentally override or access it.\n",
+    "\n",
+    "In Python, name mangling is achieved by adding two underscores (__) before an attribute name. When this is done, the Python interpreter actually changes the name of the variable in a way that makes it harder to create subclasses that accidentally override private methods and attributes.\n",
+    "\n",
+    "Name **mangling affects encapsulation** by making it harder to accidentally override or access private attributes. It adds an extra level of protection, but it's important to note that it's still possible to access these attributes if you really want to."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2583,6 +2658,64 @@
    "source": [
     "\n",
     "### 8. Create a Python class called `BankAccount` with private attributes for the account balance (`__balance`) and account number (`__account_number`). Provide methods for depositing and withdrawing money."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Account Number: 123456789\n",
+      "Initial Balance: 10000\n",
+      "Updated Balance: 11500\n",
+      "Updated Balance: 9400\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a Python class called `BankAccount`\n",
+    "class BankAccount:\n",
+    "    def __init__(self, account_number, initial_balance=0):\n",
+    "        # Private attributes\n",
+    "        self.__account_number = account_number\n",
+    "        self.__balance = initial_balance\n",
+    "\n",
+    "    # methods for depositing money\n",
+    "    def deposit(self, amount):\n",
+    "        if amount > 0:\n",
+    "            self.__balance += amount\n",
+    "        else:\n",
+    "            print(\"Invalid deposit amount. Please enter a positive value!\")\n",
+    "\n",
+    "    # methods for withdrawing money\n",
+    "    def withdraw(self, amount):\n",
+    "        if 0 < amount <= self.__balance:\n",
+    "            self.__balance -= amount\n",
+    "        else:\n",
+    "            print(\"Insufficient funds in account. Please enter valid value!\")\n",
+    "\n",
+    "    def get_balance(self):\n",
+    "        return self.__balance\n",
+    "\n",
+    "    def get_account_number(self):\n",
+    "        return self.__account_number\n",
+    "\n",
+    "# Create an instance\n",
+    "account = BankAccount(\"123456789\", 10000)\n",
+    "\n",
+    "print(f\"Account Number: {account.get_account_number()}\")\n",
+    "print(f\"Initial Balance: {account.get_balance()}\")\n",
+    "account.deposit(1500)\n",
+    "print(f\"Updated Balance: {account.get_balance()}\")\n",
+    "\n",
+    "account.withdraw(2100)\n",
+    "print(f\"Updated Balance: {account.get_balance()}\")\n",
+    "\n",
+    "account.withdraw(2000)\n"
    ]
   },
   {
@@ -2597,19 +2730,344 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*Ans:*\n",
     "\n",
-    "### 10. How can you access private attributes in Python? Provide an example demonstrating the use of name mangling.\n",
-    "### 11. Create a Python class hierarchy for a school system, including classes for students, teachers, and courses, and implement encapsulation principles to protect sensitive information.\n",
-    "### 12. Explain the concept of property decorators in Python and how they relate to encapsulation.\n",
-    "### 13. What is data hiding, and why is it important in encapsulation? Provide examples.\n",
-    "### 14. Create a Python class called `Employee` with private attributes for salary (`__salary`) and employee ID (`__employee_id`). Provide a method to calculate yearly bonuses.\n",
-    "### 15. Discuss the use of accessors and mutators in encapsulation. How do they help maintain control over attribute access?\n",
-    "### 16. What are the potential drawbacks or disadvantages of using encapsulation in Python?\n",
-    "### 17. Create a Python class for a library system that encapsulates book information, including titles, authors, and availability status.\n",
-    "### 18. Explain how encapsulation enhances code reusability and modularity in Python programs.\n",
-    "### 19. Describe the concept of information hiding in encapsulation. Why is it essential in software development?\n",
+    "Encapsulation is a fundamental concept in object-oriented programming that offers several advantages in terms of code maintainability and security:\n",
+    "\n",
+    "1. **Code Maintainability**:\n",
+    "\n",
+    "* **Modularization**: Encapsulation allows you to modularize your code by defining a clear interface for interactions with objects. This makes it easier to understand, modify, and extend your code.\n",
+    "\n",
+    "* **Reduced Complexity**: By hiding the internal implementation details of a class, encapsulation simplifies the interface and shields the rest of the code from the complexity of the class's internals.\n",
+    "\n",
+    "* **Improved Readability**: Encapsulation promotes a clean separation between the public interface and private implementation, making the code more readable and comprehensible.\n",
+    "\n",
+    "2. **Security**:\n",
+    "\n",
+    "* **Controlled Access**: Encapsulation restricts access to certain attributes and methods by making them private or protected. This prevents unintended or unauthorized modifications, reducing the risk of bugs and security vulnerabilities.\n",
+    "\n",
+    "* **Data Validation**: Encapsulation allows you to add validation logic within setter methods, ensuring that only valid data is stored in object attributes. This is especially important for maintaining data integrity and security.\n",
+    "\n",
+    "* **Prevention of Unauthorized Modifications**: By hiding the internal state of an object and allowing controlled access, encapsulation helps prevent unintended or unauthorized modifications to an object's attributes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 10. How can you access private attributes in Python? Provide an example demonstrating the use of name mangling."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Ans:*\n",
+    "\n",
+    "Name mangling involves adding a prefix to the attribute name, which makes it harder to access from outside the class.\n",
+    "\n",
+    "Private attributes in Python are those that start with two underscores (`__`). When Python encounters this, it internally changes the name of the variable to `_classname__variablename`. This is known as *name mangling*.\n",
+    "\n",
+    "Private attributes can be accessed using a technique called \"name mangling\". We can access the private of the class using `_classname__variablename`.\n",
+    "\n",
+    "Example as below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass:\n",
+    "    def __init__(self):\n",
+    "        self.__private_attribute = 42\n",
+    "\n",
+    "    def access_private_attribute(self):\n",
+    "        return self.__private_attribute\n",
+    "\n",
+    "# Create an instance\n",
+    "my_object = MyClass()\n",
+    "\n",
+    "# Accessing the private attribute using the name mangling technique\n",
+    "print(my_object._MyClass__private_attribute)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 11. Create a Python class hierarchy for a school system, including classes for students, teachers, and courses, and implement encapsulation principles to protect sensitive information."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Course: Machine Learning (ML101)\n",
+      "Teacher: Ms. Gauri, Employee ID: T9876\n",
+      "Student: Mahesh, Student ID: S12345, Age: 18\n",
+      "Student: Hari, Student ID: S12346, Age: 17\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.__name = name\n",
+    "        self.__age = age\n",
+    "\n",
+    "    def get_name(self):\n",
+    "        return self.__name\n",
+    "\n",
+    "    def get_age(self):\n",
+    "        return self.__age\n",
+    "\n",
+    "\n",
+    "class Student(Person):\n",
+    "    def __init__(self, name, age, student_id):\n",
+    "        super().__init__(name, age)\n",
+    "        self.__student_id = student_id\n",
+    "\n",
+    "    def get_student_id(self):\n",
+    "        return self.__student_id\n",
+    "\n",
+    "\n",
+    "class Teacher(Person):\n",
+    "    def __init__(self, name, age, employee_id):\n",
+    "        super().__init__(name, age)\n",
+    "        self.__employee_id = employee_id\n",
+    "\n",
+    "    def get_employee_id(self):\n",
+    "        return self.__employee_id\n",
+    "\n",
+    "\n",
+    "class Course:\n",
+    "    def __init__(self, course_name, course_code):\n",
+    "        self.__course_name = course_name\n",
+    "        self.__course_code = course_code\n",
+    "        self.__students = []\n",
+    "\n",
+    "    def get_course_name(self):\n",
+    "        return self.__course_name\n",
+    "\n",
+    "    def get_course_code(self):\n",
+    "        return self.__course_code\n",
+    "\n",
+    "    def add_student(self, student):\n",
+    "        self.__students.append(student)\n",
+    "\n",
+    "    def get_students(self):\n",
+    "        return self.__students\n",
+    "\n",
+    "\n",
+    "# Usages:\n",
+    "student1 = Student(\"Mahesh\", 18, \"S12345\")\n",
+    "student2 = Student(\"Hari\", 17, \"S12346\")\n",
+    "\n",
+    "teacher = Teacher(\"Ms. Gauri\", 30, \"T9876\")\n",
+    "\n",
+    "course = Course(\"Machine Learning\", \"ML101\")\n",
+    "course.add_student(student1)\n",
+    "course.add_student(student2)\n",
+    "\n",
+    "print(f\"Course: {course.get_course_name()} ({course.get_course_code()})\")\n",
+    "print(f\"Teacher: {teacher.get_name()}, Employee ID: {teacher.get_employee_id()}\")\n",
+    "\n",
+    "for student in course.get_students():\n",
+    "    print(f\"Student: {student.get_name()}, Student ID: {student.get_student_id()}, Age: {student.get_age()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12. Explain the concept of property decorators in Python and how they relate to encapsulation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Ans:*\n",
+    "\n",
+    "**Property decorators** are a mechanism for controlling access to class attributes by providing getter, setter, and deleter methods for these attributes. They are used to implement encapsulation and control how attribute values are accessed, set, or deleted.\n",
+    "\n",
+    "Property decorators are typically applied to class attributes, allowing you to define custom behavior when reading, writing, or deleting the values of those attributes. This is achieved using the `@property`, `@attribute_name.setter`, and `@attribute_name.deleter` decorators. Here's how they relate to encapsulation:\n",
+    "\n",
+    "**@property**: This decorator is used for getter methods. It allows you to define how an attribute's value is retrieved when accessed. By using `@property` or `@property.getter`, you can encapsulate the internal representation of an attribute and provide a controlled way to access it. This is especially useful when you need to calculate or validate the value before returning it.\n",
+    "\n",
+    "**@attribute_name.setter**: This decorator is used for setter methods. It allows you to control how the attribute's value is set. With a setter, you can validate and modify the incoming value before assigning it to the attribute, ensuring data integrity and security.\n",
+    "\n",
+    "**@attribute_name.deleter**: This decorator is used for deleter methods. It allows you to specify the behavior when an attribute is deleted. This can be useful for releasing resources or implementing additional cleanup actions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self, name, age):\n",
+    "        self._name = name  # Protected attribute\n",
+    "        self._age = age\n",
+    "\n",
+    "    @property\n",
+    "    def name(self):\n",
+    "        print(\"Getting name\")\n",
+    "        return self._name\n",
+    "\n",
+    "    @name.setter\n",
+    "    def name(self, new_name):\n",
+    "        print(\"Setting name\")\n",
+    "        self._name = new_name\n",
+    "\n",
+    "    @name.deleter\n",
+    "    def name(self):\n",
+    "        print(\"Deleting name\")\n",
+    "        del self._name\n",
+    "\n",
+    "    @property\n",
+    "    def age(self):\n",
+    "        print(\"Getting age\")\n",
+    "        return self._age\n",
+    "\n",
+    "student = Student(\"Robin\", 20)\n",
+    "\n",
+    "# Using the getter for reading the name attribute\n",
+    "print(student.name)  # Output: Getting name, Alice\n",
+    "\n",
+    "# Using the setter for setting the name attribute\n",
+    "student.name = \"Robin Pabbi\"\n",
+    "\n",
+    "# Using the deleter for deleting the name attribute\n",
+    "del student.name\n",
+    "\n",
+    "# Using the property decorator for reading the age attribute\n",
+    "print(student.age)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 13. What is data hiding, and why is it important in encapsulation? Provide examples."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 14. Create a Python class called `Employee` with private attributes for salary (`__salary`) and employee ID (`__employee_id`). Provide a method to calculate yearly bonuses."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 15. Discuss the use of accessors and mutators in encapsulation. How do they help maintain control over attribute access?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 16. What are the potential drawbacks or disadvantages of using encapsulation in Python?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 17. Create a Python class for a library system that encapsulates book information, including titles, authors, and availability status."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 18. Explain how encapsulation enhances code reusability and modularity in Python programs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 19. Describe the concept of information hiding in encapsulation. Why is it essential in software development?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 20. Create a Python class called `Customer` with private attributes for customer details like name, address, and contact information. Implement encapsulation to ensure data integrity and security."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
