some more questions solved

--- a/DayWiseMaterial/Assignments/20th_Oct_OOPs_Assignment2.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Oct_OOPs_Assignment2.ipynb
@@ -3511,7 +3511,24 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "*Ans:*\n",
+    "\n",
+    "**Polymorphism** is the ability of a class or function to behave differently based on the context in which it is used. It allows objects or functions to take on multiple forms, depending on the situation.\n",
+    "\n",
+    "In the context of object-oriented programming (OOP), polymorphism is one of the four fundamental pillars, along with inheritance, encapsulation, and abstraction. There are two primary forms of polymorphism in Python:\n",
+    "\n",
+    "**Compile-Time Polymorphism** (also known as Static Polymorphism):\n",
+    "\n",
+    "This type of polymorphism is resolved at compile time, and it involves method overloading.\n",
+    "*Method overloading* is the ability to define multiple methods with the same name in a class but with different parameters. The appropriate method is selected based on the number or types of arguments passed during compilation.\n",
+    "\n",
+    "**Run-Time Polymorphism** (also known as Dynamic Polymorphism):\n",
+    "\n",
+    "This is the more common form of polymorphism in OOP and is achieved through method overriding and inheritance.\n",
+    "*Method overriding* allows a subclass to provide a specific implementation of a method that is already defined in its superclass. When an object of the subclass is used to call that method, the overridden version is executed.\n",
+    "Dynamic polymorphism allows the same method name to behave differently depending on the specific type of object it is called on. It is a key feature in Python, and it makes code more flexible and adaptable."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3523,7 +3540,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "| **Compile-time Polymorphism** | **Runtime Polymorphism** |\n",
+    "| ------------- | ------------|\n",
+    "| The determination of which method to call is made by the compiler based on the context and the types of variables involved.| The determination of which method to call is made dynamically based on the type of object involved.|\n",
+    "| Occurs at compile time, before the program is run. | Occurs at runtime, while the program is running. |\n",
+    "| Also known as early binding or static polymorphism. | Also known as late binding or dynamic polymorphism.|\n",
+    "| Achieved through **method overloading** | Achieved through **method overriding** |"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3534,10 +3558,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area of circle: 78.5\n",
+      "Area of square: 25\n",
+      "Area of triangle: 9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Super class (base class) Shape\n",
+    "class Shape:\n",
+    "    def calculate_area(self):\n",
+    "        pass\n",
+    "\n",
+    "class Circle(Shape):\n",
+    "    def __init__(self, radius):\n",
+    "        self.radius = radius\n",
+    "\n",
+    "    # calculate_area for circle\n",
+    "    def calculate_area(self):\n",
+    "        return 3.14 * self.radius**2\n",
+    "\n",
+    "class Square(Shape):\n",
+    "    def __init__(self, side_length):\n",
+    "        self.side_length = side_length\n",
+    "\n",
+    "    # calculate_area for Square\n",
+    "    def calculate_area(self):\n",
+    "        return self.side_length**2\n",
+    "\n",
+    "class Triangle(Shape):\n",
+    "    def __init__(self, base, height):\n",
+    "        self.base = base\n",
+    "        self.height = height\n",
+    "\n",
+    "    # calculate_area for Triangle\n",
+    "    def calculate_area(self):\n",
+    "        return 0.5 * self.base * self.height\n",
+    "\n",
+    "# Create INstance of each shape type\n",
+    "circle = Circle(5)\n",
+    "square = Square(5)\n",
+    "triangle = Triangle(3, 6)\n",
+    "\n",
+    "print(f\"Area of circle: {circle.calculate_area()}\")\n",
+    "print(f\"Area of square: {square.calculate_area()}\") \n",
+    "print(f\"Area of triangle: {triangle.calculate_area()}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3549,7 +3622,51 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "*Ans:*\n",
+    "\n",
+    "**Method overriding** is a concept in object-oriented programming where a subclass provides a specific implementation for a method that is already defined in its superclass. This allows the subclass to customize or extend the behavior of the inherited method.\n",
+    "\n",
+    "Example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generic animal sound\n",
+      "Woof!\n",
+      "Meow!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "    def make_sound(self):\n",
+    "        return \"Generic animal sound\"\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def make_sound(self):\n",
+    "        return \"Woof!\"\n",
+    "\n",
+    "class Cat(Animal):\n",
+    "    def make_sound(self):\n",
+    "        return \"Meow!\"\n",
+    "\n",
+    "# Usage:\n",
+    "animal = Animal()\n",
+    "dog = Dog()\n",
+    "cat = Cat()\n",
+    "\n",
+    "print(animal.make_sound())\n",
+    "print(dog.make_sound())\n",
+    "print(cat.make_sound())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3561,7 +3678,97 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Polymorphism** and **method overloading** are related concepts in object-oriented programming, but they work differently in Python.\n",
+    "\n",
+    "**Polymorphism**:\n",
+    "\n",
+    "* Polymorphism allows objects or functions to take on multiple forms, depending on the context in which they are used.\n",
+    "* It is achieved through two main mechanisms: method overriding and method overloading.\n",
+    "* In Python, polymorphism is primarily achieved through method overriding.\n",
+    "* In polymorphism, a method in a superclass is overridden in a subclass to provide a specific implementation.\n",
+    "\n",
+    "Example of polymorphism (method overriding) in python: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Animal:\n",
+    "    def make_sound(self):\n",
+    "        pass\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def make_sound(self):\n",
+    "        return \"Woof!\"\n",
+    "\n",
+    "class Cat(Animal):\n",
+    "    def make_sound(self):\n",
+    "        return \"Meow!\"\n",
+    "\n",
+    "dog = Dog()\n",
+    "cat = Cat()\n",
+    "\n",
+    "print(dog.make_sound())  # Output: \"Woof!\"\n",
+    "print(cat.make_sound())  # Output: \"Meow!\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Method Overloading**:\n",
+    "\n",
+    "* Traditional method overloading involves defining multiple methods with the same name but different parameter lists within a class.\n",
+    "* In Python, method overloading (as seen in languages like C#) is not directly supported. It doesn't work based on the number or type of arguments.\n",
+    "\n",
+    "In C# below is example of method overloading:\n",
+    "\n",
+    "```\n",
+    "class Calculator {\n",
+    "    int add(int a, int b) {\n",
+    "        return a + b;\n",
+    "    }\n",
+    "\n",
+    "    double add(double a, double b) {\n",
+    "        return a + b;\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Example of `add_number` method in python:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6.0\n",
+      "Hello, world\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add_numbers(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "result1 = add_numbers(2, 3)         # Output: 5 (addition of integers)\n",
+    "result2 = add_numbers(2.5, 3.5)     # Output: 6.0 (addition of floats)\n",
+    "result3 = add_numbers(\"Hello, \", \"world\")  # Output: \"Hello, world\" (string concatenation)\n",
+    "\n",
+    "print(result1)\n",
+    "print(result2)\n",
+    "print(result3)"
+   ]
   },
   {
    "cell_type": "markdown",
