Solved more questions

--- a/DayWiseMaterial/Assignments/20th_Oct_OOPs_Assignment2.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Oct_OOPs_Assignment2.ipynb
@@ -3779,10 +3779,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Woof!\n",
+      "Meow!\n",
+      "Chirp!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "    def speak(self):\n",
+    "        pass\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def speak(self):\n",
+    "        return \"Woof!\"\n",
+    "\n",
+    "class Cat(Animal):\n",
+    "    def speak(self):\n",
+    "        return \"Meow!\"\n",
+    "\n",
+    "class Bird(Animal):\n",
+    "    def speak(self):\n",
+    "        return \"Chirp!\"\n",
+    "\n",
+    "# Usage:\n",
+    "dog = Dog()\n",
+    "cat = Cat()\n",
+    "bird = Bird()\n",
+    "\n",
+    "print(dog.speak())     # Output: \"Woof!\"\n",
+    "print(cat.speak())     # Output: \"Meow!\"\n",
+    "print(bird.speak())    # Output: \"Chirp!\"\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3794,13 +3829,112 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "*Ans:*\n",
+    "\n",
+    "In Python, **abstract methods and classes** play a crucial role in achieving polymorphism. Abstract methods define a method signature in an abstract base class, and concrete subclasses must provide an implementation for these methods. The abc module (*Abstract Base Classes*) is used to define abstract classes and methods.\n",
+    "\n",
+    "Here's an example using the abc module to demonstrate polymorphism through abstract methods and classes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area: 153.86\n",
+      "Area: 84\n"
+     ]
+    }
+   ],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "# Abstract base class\n",
+    "class Shape(ABC):\n",
+    "    @abstractmethod\n",
+    "    def area(self):\n",
+    "        pass\n",
+    "\n",
+    "# Concrete subclass Circle\n",
+    "class Circle(Shape):\n",
+    "    def __init__(self, radius):\n",
+    "        self.radius = radius\n",
+    "\n",
+    "    def area(self):\n",
+    "        return 3.14 * self.radius * self.radius\n",
+    "\n",
+    "# Concrete subclass Rectangle\n",
+    "class Rectangle(Shape):\n",
+    "    def __init__(self, length, width):\n",
+    "        self.length = length\n",
+    "        self.width = width\n",
+    "\n",
+    "    def area(self):\n",
+    "        return self.length * self.width\n",
+    "\n",
+    "# Usage\n",
+    "circle = Circle(7)\n",
+    "rectangle = Rectangle(14, 6)\n",
+    "\n",
+    "shapes = [circle, rectangle]\n",
+    "\n",
+    "for shape in shapes:\n",
+    "    print(f\"Area: {shape.area()}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 8. Create a Python class hierarchy for a vehicle system (e.g., car, bicycle, boat) and implement a polymorphic `start()` method that prints a message specific to each vehicle type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Car engine started. Ready to go!\n",
+      "Pedaling... Bicycle is in motion!\n",
+      "Engine running. Let's Sail the boat!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle:\n",
+    "    def start(self):\n",
+    "        pass\n",
+    "\n",
+    "class Car(Vehicle):\n",
+    "    def start(self):\n",
+    "        return \"Car engine started. Ready to go!\"\n",
+    "\n",
+    "class Bicycle(Vehicle):\n",
+    "    def start(self):\n",
+    "        return \"Pedaling... Bicycle is in motion!\"\n",
+    "\n",
+    "class Boat(Vehicle):\n",
+    "    def start(self):\n",
+    "        return \"Engine running. Let's Sail the boat!\"\n",
+    "\n",
+    "# INstances\n",
+    "car = Car()\n",
+    "bicycle = Bicycle()\n",
+    "boat = Boat()\n",
+    "\n",
+    "vehicles = [car, bicycle, boat]\n",
+    "\n",
+    "for vehicle in vehicles:\n",
+    "    print(vehicle.start())\n"
    ]
   },
   {
@@ -3814,7 +3948,171 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*Ans:*\n",
+    "\n",
+    "The functions `isinstance()` and `issubclass()` are essential in Python for working with polymorphism.\n",
+    "\n",
+    "**`isinstance()`**:\n",
+    "\n",
+    "* The `isinstance()` function is used to determine whether an object is an instance of a particular class or any of its subclasses.\n",
+    "* It takes two arguments: the object and the class or type you want to check against.\n",
+    "* It returns True if the object is an instance of the specified class or its subclass, and False otherwise.\n",
+    "\n",
+    "Example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "    pass\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    pass\n",
+    "\n",
+    "dog = Dog()\n",
+    "\n",
+    "print(isinstance(dog, Dog))      # Output: True\n",
+    "print(isinstance(dog, Animal))   # Output: True\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`issubclass()`**:\n",
+    "\n",
+    "* The `issubclass()` function checks whether a class is a subclass of a specified class or any of its subclasses.\n",
+    "* It takes two arguments: the class you want to check and the class you want to check against.\n",
+    "* It returns True if the first class is a subclass of the second class, and False otherwise.\n",
+    "\n",
+    "Example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "    pass\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    pass\n",
+    "\n",
+    "print(issubclass(Dog, Animal))   # Output: True\n",
+    "print(issubclass(Animal, Dog))   # Output: False\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 10. What is the role of the `@abstractmethod` decorator in achieving polymorphism in Python? Provide an example."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Ans:*\n",
+    "\n",
+    "The **`@abstractmethod`** decorator is a key component of achieving polymorphism in Python using abstract classes. It is part of the abc module (Abstract Base Classes) and allows you to declare abstract methods in a base class. Abstract methods are methods that are defined in the base class but have no implementation. Subclasses are required to provide their own implementation for these methods.\n",
+    "\n",
+    "Here is an example demonstrating the use of `@abstractmethod`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area: 153.86\n",
+      "Area: 84\n"
+     ]
+    }
+   ],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "# Abstract base class\n",
+    "class Shape(ABC):\n",
+    "    @abstractmethod\n",
+    "    def area(self):\n",
+    "        pass\n",
+    "\n",
+    "# Concrete subclass Circle\n",
+    "class Circle(Shape):\n",
+    "    def __init__(self, radius):\n",
+    "        self.radius = radius\n",
+    "\n",
+    "    def area(self):\n",
+    "        return 3.14 * self.radius * self.radius\n",
+    "\n",
+    "# Concrete subclass Rectangle\n",
+    "class Rectangle(Shape):\n",
+    "    def __init__(self, length, width):\n",
+    "        self.length = length\n",
+    "        self.width = width\n",
+    "\n",
+    "    def area(self):\n",
+    "        return self.length * self.width\n",
+    "\n",
+    "# Usage\n",
+    "circle = Circle(7)\n",
+    "rectangle = Rectangle(14, 6)\n",
+    "\n",
+    "shapes = [circle, rectangle]\n",
+    "\n",
+    "for shape in shapes:\n",
+    "    print(f\"Area: {shape.area()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11. Create a Python class called `Shape` with a polymorphic method `area()` that calculates the area of different shapes (e.g., circle, rectangle, triangle)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12. Discuss the benefits of polymorphism in terms of code reusability and flexibility in Python programs."
    ]
   },
   {
@@ -3826,9 +4124,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 11. Create a Python class called `Shape` with a polymorphic method `area()` that calculates the area of different shapes (e.g., circle, rectangle, triangle).\n",
-    "### 12. Discuss the benefits of polymorphism in terms of code reusability and flexibility in Python programs.\n",
-    "### 13. Explain the use of the `super()` function in Python polymorphism. How does it help call methods of parent classes?\n",
+    "### 13. Explain the use of the `super()` function in Python polymorphism. How does it help call methods of parent classes?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 14. Create a Python class hierarchy for a banking system with various account types (e.g., savings, checking, credit card) and demonstrate polymorphism by implementing a common `withdraw()` method.\n",
     "### 15. Describe the concept of operator overloading in Python and how it relates to polymorphism. Provide examples using operators like `+` and `*`.\n",
     "### 16. What is dynamic polymorphism, and how is it achieved in Python?\n",
@@ -3837,6 +4139,21 @@
     "### 19. Explain the role of interfaces and abstract classes in polymorphism, drawing comparisons between them.\n",
     "### 20. Create a Python class for a zoo simulation, demonstrating polymorphism with different animal types (e.g., mammals, birds, reptiles) and their behavior (e.g., eating, sleeping, making sounds)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
